force-app/main/default/objects/Facilities__c/Facilities__c.object-meta.xml
<CustomObject>
    <description>Facilities Provided</description>
    <label>Facilities</label>
    <nameField>
        <label>Facilities</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>