force-app/main/default/objects/Facilities__c/fields/Maintenance_Staff__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The maintenance staff responsible for the facility.</description>
    <inlineHelpText>The maintenance staff responsible for the facility.</inlineHelpText>
    <label>Maintenance Staff</label>
    <referenceTo>Maintenance_Staff__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>