force-app/main/default/objects/Facilities__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Common Area</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Private Office</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Work Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>