force-app/main/default/objects/Facilities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Capacity__c</columns>
    <columns>Location__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Maintenance_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>